<resources>
    <string name="app_name">MOWCH</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retypepassword">Retype Password</string>
    <string name="action_sign_in"><u>Sign up</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Forgot_Password"><u>Forgot Password?</u></string>
    <string name="type_new_password">Type in your new password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_">Hello!</string>
    <string name="admin">Admin</string>
    <string name="username">FIRST LAST</string>
    <string name="menu_home">My Route</string>
    <string name="menu_settings">Settings</string>
    <string name="admenu_routes">All Routes</string>
    <string name="admenu_drivers">All Drivers</string>
    <string name="menu_contactAdmin">Contact Admin</string>
    <string name="menu_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="lorem_ipsum">

        Lorem ipsum dolor sit amet, consectetur  adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque vitae tempus quam pellentesque nec nam. Integer eget aliquet nibh praesent tristique magna sit. Lacinia quis vel eros donec ac odio tempor. Ultrices eros in cursus turpis massa tincidunt dui ut. Vel eros donec ac odio tempor. Pretium viverra suspendisse potenti nullam ac tortor. Aliquet nec ullamcorper sit amet risus nullam eget. Sociis natoque penatibus et magnis dis. adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque vitae tempus quam pellentesque nec nam. Integer eget aliquet nibh praesent tristique magna sit. Lacinia quis vel eros donec ac odio tempor. Ultrices eros in cursus turpis massa tincidunt dui ut. Vel eros donec ac odio tempor. Pretium viverra suspendisse potenti nullam ac tortor. Aliquet nec ullamcorper sit amet risus nullam eget. Sociis natoque penatibus et magnis dis. adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque vitae tempus quam pellentesque nec nam. Integer eget aliquet nibh praesent tristique magna sit. Lacinia quis vel eros donec ac odio tempor. Ultrices eros in cursus turpis massa tincidunt dui ut. Vel eros donec ac odio tempor. Pretium viverra suspendisse potenti nullam ac tortor. Aliquet nec ullamcorper sit amet risus nullam eget. Sociis natoque penatibus et magnis dis.
    </string>


    <string name="cancel">

        Cancel
    </string>
    <string name="routeNameSelected">Route A</string>
    <string name="milesSelected">20 miles</string>
    <string name="report_emer">Report Emergency</string>
    <string name="confirm_eme">Confirm Emergency</string>
    <string name="driver_name">John Smith</string>
    <string name="you_have_pa">You have paused the route</string>
    <string name="continue_text">Press continue once you are ready</string>
    <string name="sample_address"> 123 H Street\nCarrboro, NC\n27232</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sample_notif">Thanks for reporting the emergency! You may continue as scheduled and simply skip the current address.</string>


</resources>
