<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/imagefour"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/wind"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_contactAdmin"
        android:icon="@drawable/phone_icon"
        android:title="@string/menu_contactAdmin" />

    <item
        android:id="@+id/nav_notif"
        android:icon="@drawable/notif"
        android:title="@string/menu_notifications"
        />
    <item
        android:id="@+id/nav_report"
        android:title="@string/report_emer"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:menuCategory="secondary"
        android:title="Logout" />
</menu>