<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group>

        <item
            android:id="@+id/nav_allroutes"
            android:icon="@drawable/ic_outline_map_24"
            android:title="@string/admenu_routes" />
        <item
            android:id="@+id/nav_alldrivers"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/admenu_drivers" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/imagefour"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/wind"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_baseline_report_problem_24"
            android:title="@string/report_emer" />


    </group>

    <group >

        <item
            android:id="@+id/empty"
            android:title=" "
            android:enabled="false"
            />


        <item
            android:id="@+id/nav_report2"
            android:menuCategory="secondary"
            android:enabled="false"
            android:title=" " />

        <item
            android:id="@+id/nav_report3"
            android:menuCategory="secondary"
            android:enabled="false"
            android:title=" " />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:menuCategory="secondary"
            android:title="Logout" />

    </group>


</menu>