<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="365dp"
        android:layout_height="207dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="93dp"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="467dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/bryantproreg"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="28dp"

        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/editpassword2"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="541dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/bryantproreg"
        android:hint="@string/prompt_retypepassword"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="628dp"
        android:background="@drawable/loginfield"
        android:text="Reset Password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="39dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="341dp"
        android:text="Almost There"
        android:fontFamily="@font/robotobold"
        android:gravity="center_horizontal|top"
        android:textColor="@color/white"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/type_in_you"
        android:layout_width="348dp"
        android:layout_height="99dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="406dp"
        android:text="@string/type_new_password"
        android:textColor="@color/white"
        android:fontFamily="@font/robotobold"
        android:textSize="23sp"
        android:gravity="center_horizontal|top"
        />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="485dp"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="555dp"
        app:srcCompat="@drawable/password" />


</RelativeLayout>